<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".model.OptionsMenu">

    <TextView
        android:id="@+id/boardsizetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/deadkillers"
        android:text="@string/board_size"
        android:textColor="#F10909"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minestext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/deadkillers"
        android:text="@string/zombies"
        android:textColor="#FB0404"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardsizetext" />

    <TextView
        android:id="@+id/optionstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/green"
        android:text="@string/optionsmenuheader"
        android:textColor="#EF0505"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionsback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/deadkillers"
        android:text="@string/optionsback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/boardsizespinner"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="123dp"
        android:background="@android:color/darker_gray"
        android:popupBackground="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/boardsizetext"
        app:layout_constraintTop_toBottomOf="@+id/optionstext" />

    <Spinner
        android:id="@+id/minespinner"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/darker_gray"
        android:popupBackground="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/minestext"
        app:layout_constraintTop_toBottomOf="@+id/boardsizespinner" />
</androidx.constraintlayout.widget.ConstraintLayout>